# Take-home-technical-exercise

./: .gitignore  DESIGN.md  README.md  pyproject.toml
src/logstats/: __init__.py  __main__.py  cli.py  parsing.py  pipeline.py
src/logstats/aggregation/: __init__.py  aggregator.py
src/logstats/dimensions/: __init__.py  base.py  browser.py  country.py  http_method.py  operating_system.py  registry.py  status_class.py
src/logstats/models/: __init__.py  category_share.py  dimension_statistics.py  log_record.py  parsed_user_agent.py  partial_aggregate.py  stage_timings.py  statistical_report.py
src/logstats/reporting/: __init__.py  base.py  console.py  csv_report.py  json_report.py  registry.py  text.py
src/logstats/resolvers/: __init__.py  base.py  country.py  user_agent.py
src/logstats/service/: __init__.py  analyze.py  parallel.py  render.py  report_service.py
tests/: __init__.py  conftest.py  test_aggregation.py  test_browser_dimension.py  test_cli_e2e.py  test_console_report.py  test_country_dimension.py  test_country_resolver.py  test_csv_report.py  test_dimension_registry.py  test_http_method_dimension.py  test_integration.py  test_json_report.py  test_operating_system_dimension.py  test_parallel.py  test_parsing.py  test_pipeline.py  test_render.py  test_report_registry.py  test_report_service.py  test_status_class_dimension.py  test_text_report.py  test_user_agent_resolver.py
